--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-paginate-v2": "^1.7.31",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "winston": "^3.10.0"
   }
 }
